--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -9,31 +9,7 @@
         {% block stylesheets %}
             <!-- CSS only -->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <style>
-            html, body{
-                font-family: 'Montserrat', sans-serif;
-            }
-
-
-            .alert{
-                padding: 10px;
-                color: white;
-                text-align: center;
-                margin: 0;
-                border: none;
-                border-radius: 0;
-            }
-
-            .alert-success{
-                background-color: green;
-            }
-            .alert-error{
-                background-color: red;
-            }
-            .alert-info{
-                background-color: blue;
-            }
-        </style>
+     <link rel="stylesheet" href="{{ asset('FrontOffice/css/app.css') }}">
         {% endblock %}
 
     </head>
