--- a/templates/layouts/partiels/_nav.html.twig
+++ b/templates/layouts/partiels/_nav.html.twig
@@ -32,8 +32,8 @@
 
 
            </ul>
-           <form role="search ">
-               <input class="form-control" type="search" placeholder="Rechercher" aria-label="Search" >
+           <form role="search " action="/recherche" method="post">
+               <input name="searche" class="form-control" type="search" placeholder="Rechercher" aria-label="Search" >
            </form>
        </div>
     </div>
