--- a/public/FrontOffice/css/app.scss
+++ b/public/FrontOffice/css/app.scss
@@ -1,3 +1,4 @@
+
 html, body{
     font-family: 'Montserrat', sans-serif;
 }
@@ -20,4 +21,24 @@ html, body{
 }
 .alert-info{
     background-color: blue;
+}
+
+.vich-image{
+  .form-check{
+      @extend  .mt-3;
+  }
+
+img{
+    @extend .mb-2;
+    @extend .rounded;
+    @extend .shadow;
+    @extend .img-thumbnail;
+}
+}
+.article img{
+    transition: transform 0.3s ease-out;
+    &:hover{
+        transform: scale(1.075);
+
+    }
 }
