--- a/templates/pages/show.html.twig
+++ b/templates/pages/show.html.twig
@@ -1,15 +1,30 @@
 {% extends 'layouts/base.html.twig' %}
 {% block body %}
-<article>
-    <h1>{{ article.nomA }}</h1>
-    <p>{{ article.descriptionA }}</p>
-</article>
-    <a href=" {{ path('app_articles_modif',{idArticle: article.idArticle}) }} ">Modifier</a> |
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            <Article class="article bg-white rounded shadow" >
+                <a href="{{ path('app_articles_show',{idArticle: article.idArticle}) }}">
+                    <img src="{{ (article.imageH ? vich_uploader_asset(article) :asset('images/download.jpg')) | imagine_filter('squared_thumbnail_medium') }}" alt="{{ article.nomA }}" class="w-100 rounded-top"/>
+                </a>
 
-    <a href="#" onclick="event.preventDefault();confirm('Êtes-vous sûr de vouloir supprimer?')&& document.getElementById('js-article-supprimer-form').submit();">Supprimer</a> |
+                <h2 class="h5 pl-3 pt-3"><a href="{{ path('app_articles_show',{idArticle: article.idArticle}) }}" class="text-secondary text-decoration-none">{{ article.nomA }}</a></h2>
+                <p class="pl-3 pb-3 text-muted"> <small>Soumis {{ article.createdAt|ago }}</small></p>
+                <p class="pl-3 pb-3">{{ article.descriptionA }}</p>
 
-    <form id="js-article-supprimer-form" action="{{ path('app_articles_supp',{idArticle: article.idArticle}) }}" method="post" style="display: none;">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token('article_suppression_'~ article.idArticle) }}">
-        <input type="hidden" name="_method" value="DELETE">
-    </form>
+                <div class="pl-3 pb-3" >
+                    <a href=" {{ path('app_articles_modif',{idArticle: article.idArticle}) }} " class="btn btn-light">Modifier</a>
+
+                    <a href="#" onclick="event.preventDefault();confirm('Êtes-vous sûr de vouloir supprimer?')&& document.getElementById('js-article-supprimer-form').submit();"  class="btn btn-light">Supprimer</a>
+
+                    <form id="js-article-supprimer-form" action="{{ path('app_articles_supp',{idArticle: article.idArticle}) }}" method="post" style="display: none;">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token('article_suppression_'~ article.idArticle) }}">
+                        <input type="hidden" name="_method" value="DELETE">
+                    </form>
+                </div>
+            </Article>
+
+
+        </div>
+    </div>
+
 {% endblock %}
